fix missing background on proc zkusit koucink

--- a/src/jak-koucink-probiha.css
+++ b/src/jak-koucink-probiha.css
@@ -39,9 +39,3 @@
 .jak-koucink-probiha :is(.item-1, .item-2, .item-3, .item-4) {
   background-repeat: no-repeat;
 }
-
-@media (min-width: 500px) {
-  .jak-koucink-probiha .first-carousel {
-    /* padding-left: 60px; */
-  }
-}
