--- a/src/proc-zkusit-koucink.css
+++ b/src/proc-zkusit-koucink.css
@@ -1,5 +1,6 @@
 .proc-zkusit-koucink {
   padding: 56px 16px 0;
+  background: linear-gradient(180deg, #ffffff 0%, #e1f8f8 47.4%, #ffffff 100%);
 }
 
 .proc-zkusit-koucink .icon {
@@ -17,7 +18,6 @@
 @media (min-width: 500px) {
   .proc-zkusit-koucink {
     background-image: none;
-  padding: 56px 60px 0;
-
+    padding: 56px 60px 0;
   }
 }
