--- a/src/zustanme-v-kontaktu.css
+++ b/src/zustanme-v-kontaktu.css
@@ -38,7 +38,7 @@
   margin-top: 24px;
 }
 
-.zustanme-v-kontaktu @media (min-width: 600px) {
+@media (min-width: 600px) {
   .zustanme-v-kontaktu {
     padding: 40px 125px;
   }
